--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,26 @@ body {
 }
 
 main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 600px;
   height: 500px;
-  background-color: #fff;
+  background-color: #f5f5f5;
   border-radius: 5px;
+  padding: 20px;
+}
+
+.dice-container {
+  display: grid;
+  grid-template: auto auto / repeat(5, 1fr);
+  gap: 20px 40px;
+}
+
+.die-face {
+  background-color: #fff;
+  padding: 0 30px;
+  border-radius: 10px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
 }
