--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 body {
   margin: 0;
   background-color: #0b2434;
+  font-family: "Karla", sans-serif;
 }
 
 .App {
@@ -16,8 +17,9 @@ body {
 
 main {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  flex-direction: column;
   width: 600px;
   height: 500px;
   background-color: #f5f5f5;
@@ -37,4 +39,24 @@ main {
   border-radius: 10px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
   cursor: pointer;
+}
+
+.btn-roll {
+  cursor: pointer;
+  height: 50px;
+  width: 100px;
+  border: none;
+  border-radius: 6px;
+  background-color: #5035ff;
+  color: white;
+  font-size: 1.2rem;
+  font-family: "Karla", sans-serif;
+}
+
+.btn-roll:focus {
+  outline: none;
+}
+
+.btn-roll:active {
+  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
