--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,11 @@ main {
   padding: 20px;
 }
 
+.title {
+  font-size: 40px;
+  margin: 0;
+}
+
 .dice-container {
   display: grid;
   grid-template: auto auto / repeat(5, 1fr);
