--- a/src/index.css
+++ b/src/index.css
@@ -18,18 +18,24 @@ body {
 
 main {
   display: flex;
-  justify-content: space-around;
   align-items: center;
   flex-direction: column;
+  row-gap: 20px;
+  margin: 0 20px;
   width: 600px;
-  height: 500px;
+  max-width: 100vw;
+  max-height: 100%;
   background-color: #f5f5f5;
   border-radius: 5px;
-  padding: 20px;
+  padding: 40px 20px;
 }
 
 .title {
   font-size: 40px;
+  margin: 0;
+}
+
+.instructions {
   margin: 0;
 }
 
@@ -64,4 +70,10 @@ main {
 
 .btn-roll:active {
   box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+}
+
+@media screen and (max-width: 480px) {
+  .dice-container {
+    grid-template: auto auto / repeat(2, 1fr);
+  }
 }
